[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "solvespace"
version = "0.0.1"
description="A minimal example package (with pybind11)"
readme = "README.md"
authors = [
  { name = "Koen Schmeets", email = "koen@schmeets.de" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.verbose = true
cmake.build-type = "Debug"
sdist.exclude = [
  "res",
  "pkg",
  "dist",
  "extlib",
  "exposed",
  "bench",
  "src/srf",
  "src/render",
  "test",
  "src"
]
sdist.include = [
  ".git/HEAD",
  ".git/refs",
  "extlib/eigen",
  "extlib/mimalloc",
  "src/util.cpp",
  "src/entity.cpp",
  "src/expr.cpp",
  "src/constrainteq.cpp",
  "src/system.cpp",
  "src/groupbase.cpp",
  "src/platform/platform.cpp",
  "src/solversystem.cpp",
  "src/sketch.cpp",
  "src/config.h.in",
  "src/solvespace.h",
  "src/dsc.h",
  "src/platform/platform.h",
  "src/sketch.h",
  "src/expr.h",
  "src/solversystem.h",
]
wheel.packages = ["python/solvespace"]

[tool.scikit-build.cmake.define]
ENABLE_GUI = "OFF"
ENABLE_CLI = "OFF"
ENABLE_TESTS = "OFF"
ENABLE_COVERAGE = "OFF"
ENABLE_OPENMP = "OFF"
FORCE_VENDORED_Eigen3 = "ON"
ENABLE_PYTHON_LIB = "ON"

[tool.cibuildwheel]
build-verbosity = 1
