[project]
name = "solvespace"
version = "3.1.0"
description = "Parametric 2d/3d CAD solver"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["cad", "mechanical-engineering", "2d", "3d"]
license = { file = "COPYING.txt" }
authors = [
  { name = "Jonathan Westhues", email="jwesthues@cq.cx" }
]
maintainers = [
  { name = "Yuan Chang", email="pyslvs@gmail.com" }
]

classifiers = [
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Cython",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Typing :: Typed"
]

[project.urls]
homepage = "https://github.com/solvespace/solvespace"
documentation = "https://github.com/solvespace/solvespace"
repository = "https://github.com/solvespace/solvespace"

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp37*", "cp38*", "cp39*", "cp310*", "cp311*"]
skip = ["pp*", "*-musllinux*", "*-manylinux_i686"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]