[metadata]
name = python_solvespace
version = attr: python_solvespace.__version__
description = Python library of Solvespace.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cad,mechanical-engineering,2d,3d
license = GPLv3+
author = Yuan Chang
author_email = pyslvs@gmail.com
url = https://github.com/KmolYuan/solvespace
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Cython
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    cython

[options.package_data]
* = *.pyi, *.pxd, *.pyx
python_solvespace = py.typed

[options.packages.find]
exclude =
    test

[mypy]
pretty = True
show_error_codes = True
show_column_numbers = True
ignore_missing_imports = True
allow_redefinition = True
warn_redundant_casts = True
warn_unreachable = True
strict_equality = True
